# chaos-one

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: backend.yml  codeql.yml  release.yml  unity.yml
backend/: Makefile  chaos-one.spec  pyproject.toml
backend/benchmarks/: run_all.py
backend/proto/: chaos_one.proto
backend/scripts/: generate_protos.sh
backend/src/chaos_backend/: __init__.py  cli.py  grpc_adapters.py  launcher.py  observability.py  server.py
backend/src/chaos_backend/audit/: __init__.py  diff.py  html_viewer.py  log.py
backend/src/chaos_backend/operations/: __init__.py  driver.py  state.py
backend/src/chaos_backend/services/: adversary_model.py  coa_generator.py  discrimination.py  features.py
backend/src/chaos_backend/simulation/: __init__.py  kinematics.py  scenario_runner.py  scenarios.py
backend/src/chaos_backend/storage/: __init__.py  engagements.py
backend/src/chaos_backend/web/: __init__.py  app.py  battlespace.py  operations.py
backend/tests/: test_audit.py  test_audit_diff.py  test_cli.py  test_discrimination_models.py  test_engagements.py  test_features.py  test_grpc_integration.py  test_html_viewer.py  test_kinematics_edges.py  test_launcher.py  test_observability.py  test_operations.py  test_scenario_runner.py  test_scenarios.py  test_smoke.py  test_web.py
unity/: build.sh
unity/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
unity/Assets/_ChaosOne/Data/: HGV_Demo.asset
unity/Assets/_ChaosOne/Data/Materials/: HGV-WRAITH-01.mat  HGV-WRAITH-02.mat  MARV-VIPER-03.mat
unity/Assets/_ChaosOne/Editor/: AutoSceneBuilder.cs  BuildPlayer.cs  ChaosOne.Editor.asmdef
unity/Assets/_ChaosOne/Scenes/: Battlespace.unity
unity/Assets/_ChaosOne/Scripts/: ChaosOne.Runtime.asmdef
unity/Assets/_ChaosOne/Scripts/Audit/: AuditLogEntry.cs  AuditLogReader.cs  AuditLogVerifier.cs  AuditLogWriter.cs
unity/Assets/_ChaosOne/Scripts/Cameras/: CameraInputController.cs  CinemachineDirector.cs  OrbitalCamera.cs
unity/Assets/_ChaosOne/Scripts/Core/: ChaosOneEvents.cs  EventBus.cs  IChaosEvent.cs  Polyfills.cs  SceneBootstrap.cs  ServiceRegistry.cs
unity/Assets/_ChaosOne/Scripts/Decisions/: AdversaryEvents.cs  AdversaryMirrorService.cs  COAQueue.cs  CourseOfAction.cs  DecisionEvents.cs  EscalationLevel.cs  MagazineDelta.cs  ModeStateMachine.cs  OutcomeBand.cs  PlaybookHypothesis.cs  ROEEnvelope.cs
unity/Assets/_ChaosOne/Scripts/Net/: BackendBootstrap.cs  GrpcChaosBackendClient.cs  (+3 more)
unity/Assets/_ChaosOne/Shaders/: Envelope.shader  Trail.shader
unity/Assets/_ChaosOne/UI/: AdversaryMirror.uxml  AuditReel.uxml  COACard.uxml  CalmChannel.uxml  DecisionsPanel.uxml  ModeHUD.uxml  PanelSettings.asset  TrackInfoPanel.uxml  theme.uss
unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  VFXManager.asset
(+31 files in other folders)
