[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-backend"
version = "0.1.0"
description = "Chaos One backend services: discrimination, COA generation, adversary model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Egor Khaklin" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.27.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-protobuf>=5.27.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]
package = [
    "pyinstaller>=6.10.0",
]
ml = [
    "torch>=2.3.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
]
optim = [
    "ortools>=9.10",
]

[project.scripts]
chaos-backend = "chaos_backend.server:main"
chaos-backend-cli = "chaos_backend.cli:main"
chaos-one = "chaos_backend.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chaos_backend*"]

[tool.setuptools.package-data]
chaos_backend = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/chaos_backend/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# battlespace.py embeds a large HTML/JS string literal whose
# decorative typography (×, →, ·, °, ↑, ↓, …) is intentional —
# RUF001 (ambiguous unicode) is noise here, not a finding.
"src/chaos_backend/web/battlespace.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
exclude = "src/chaos_backend/generated/.*"

[[tool.mypy.overrides]]
module = "chaos_backend.generated.*"
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=chaos_backend",
    "--cov-report=term-missing:skip-covered",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
branch = true
source = ["src/chaos_backend"]
omit = [
    "src/chaos_backend/generated/*",
    "src/chaos_backend/server.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
skip_empty = true
fail_under = 75
